--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/libviface"]
 	path = dependencies/libviface
 	url = https://github.com/HPENetworking/libviface
+[submodule "dependencies/libtuntap"]
+	path = dependencies/libtuntap
+	url = https://github.com/LaKabane/libtuntap
