Add libtins depedency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,16 @@ set(CMAKE_CXX_STANDARD 17)
 
 
 file(GLOB_RECURSE SRC_FILES "src/*.cpp")
-add_subdirectory(dependencies/libviface)
+add_subdirectory(dependencies/libtins)
 add_subdirectory(dependencies/libtuntap)
 set(ENABLE_CXX on)
 add_executable(tcp-cpp ${SRC_FILES})
 
 
-target_include_directories(tcp-cpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/libviface/include)
+target_include_directories(tcp-cpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/libtins/include)
 target_include_directories(tcp-cpp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/libtuntap/bindings/cpp)
 target_include_directories(tcp-cpp PRIVATE include)
 
-target_link_libraries(tcp-cpp PRIVATE viface)
+target_link_libraries(tcp-cpp PRIVATE tins)
 target_link_libraries(tcp-cpp PRIVATE tuntap++)
 
